--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,4 +1,18 @@
+.register-wrapper {
+  position: relative;
+}
+
 .submitting-form {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.7);
 }
 
@@ -34,3 +48,4 @@
 [data-theme='compact'] .select-after {
   width: 65px;
 }
+
